--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,7 @@
-POSTGRES_PORT=54322
+POSTGRES_EXTERNAL_PORT=54322
+POSTGRES_PORT=5432
 POSTGRES_USER=app
 POSTGRES_PASSWORD=secret
 POSTGRES_DB=app
-POSTGRES_HOST=localhost
+POSTGRES_HOST=db
+DELVE_DEBUG_PORT=40000
