--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - "${GRPC_PORT}:${GRPC_PORT}"
       - "${HTTP_PORT}:${HTTP_PORT}"
       - "${SWAGGER_PORT}:${SWAGGER_PORT}"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   golang:
